# riscv-secureboot

./: .gitignore  .gitmodules  LICENSE  README.md  flake.nix
docs/: README.md  how-to-build.md  how-to-sign.md  run-example.md  run-ubuntu.md
nix/: create-ubuntu-img.nix  initramfs.nix  kernel.nix  keys.nix  loader-signed.nix  opensbi-cross.nix  qemu-secureboot.nix  rootfs.nix  signtool.nix  wolfssl-src.nix
nix/patches/: 0002-feat-riscv-implement-secureboot-key-insertion.patch
signtool/: .gitignore  Cargo.toml
signtool/lib/wolfssl/: Cargo.toml
signtool/lib/wolfssl-sys/: Cargo.toml  build.rs
signtool/lib/wolfssl-sys/src/: errors.rs  lib.rs
signtool/lib/wolfssl-sys/wolfssl/include/: hash.h  rng.h  signature.h  user_settings.h
signtool/lib/wolfssl-sys/wolfssl/src/: hash.c  rng.c  signature.c
signtool/lib/wolfssl/src/: wolfcrypt.rs
signtool/lib/wolfssl/src/wolfcrypt/: ed25519.rs  error.rs  rng.rs  sha3.rs
signtool/src/: hash.rs  image.rs  keytool.rs  multi_image.rs  secbimg.rs  signature.rs
